<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_principal"
        android:icon="@drawable/baseline_home_white_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_menu_it_principal" />
    <item
        android:id="@+id/bottom_nav_cuenta"
        android:icon="@drawable/baseline_account_box_white_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_menu_it_cuenta" />
    <item
        android:id="@+id/bottom_nav_configuracion"
        android:icon="@drawable/baseline_settings_white_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/bottom_nav_menu_it_configuracion" />
</menu>