<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_center"
        android:layout_width="350dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/reg_usuario"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout_center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/reg_nombre"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toBottomOf="@+id/usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellido"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/reg_apellido"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toBottomOf="@+id/nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraseña"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/reg_contrasena"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toBottomOf="@+id/apellido">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraseña_nuevo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/reg_contrasena_de_nuevo"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toBottomOf="@+id/contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reg_btn_registrar"
            app:layout_constraintBottom_toTopOf="@+id/btn_registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_registro"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/reg_btn_limpiar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>