<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.IniciarSesionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_center"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/ini_ses_usuario"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout_center">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraseña"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/ini_ses_contrasena"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout_center"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout_center"
            app:layout_constraintTop_toBottomOf="@+id/usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#546E7A"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/ini_ses_btn_ingresar"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>